add user role change endpoint
